--- a/src/azure-cli/azure/cli/command_modules/cdn/tests/latest/recordings/test_cdn_profile_delete_not_found.yaml
+++ b/src/azure-cli/azure/cli/command_modules/cdn/tests/latest/recordings/test_cdn_profile_delete_not_found.yaml
@@ -10,25 +10,29 @@ interactions:
       - cdn profile delete
       Connection:
       - keep-alive
-      Content-Length:
-      - '0'
       ParameterSetName:
       - -g -n
       User-Agent:
       - python/3.7.9 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
-        azure-mgmt-cdn/7.0.0 Azure-SDK-For-Python AZURECLI/2.17.1
+        azure-mgmt-cdn/7.0.0 Azure-SDK-For-Python AZURECLI/2.19.1
       accept-language:
       - en-US
-    method: DELETE
+    method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Cdn/profiles/foo12345?api-version=2020-09-01
   response:
     body:
-      string: ''
+      string: '{"error":{"code":"ResourceNotFound","message":"The Resource ''Microsoft.Cdn/profiles/foo12345''
+        under resource group ''clitest.rg000001'' was not found. For more details
+        please go to https://aka.ms/ARMResourceNotFoundFix"}}'
     headers:
       cache-control:
       - no-cache
+      content-length:
+      - '278'
+      content-type:
+      - application/json; charset=utf-8
       date:
-      - Mon, 15 Feb 2021 17:24:13 GMT
+      - Fri, 19 Feb 2021 11:54:10 GMT
       expires:
       - '-1'
       pragma:
@@ -37,9 +41,9 @@ interactions:
       - max-age=31536000; includeSubDomains
       x-content-type-options:
       - nosniff
-      x-ms-ratelimit-remaining-subscription-deletes:
-      - '14995'
+      x-ms-failure-cause:
+      - gateway
     status:
-      code: 204
-      message: No Content
+      code: 404
+      message: Not Found
 version: 1
